--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1867,6 +1867,9 @@ h5 {
     margin-bottom: 20px;
   }
 
+  .scopeSelection{
+    font-size: 14px;
+  }
   .eosc4cancer {
     height: 61px;
     margin-top: 20px;
