--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -27,7 +27,8 @@
   margin-bottom: 4px;
   /* display: flex; */
   align-items: flex-start;
-  /* margin-left: 4px; */
+  margin-left: 5px;
+  margin-right: 5px;
   display: flex;
   flex-direction: column;
 }
@@ -317,8 +318,6 @@ ul div {
   margin-bottom: 4px;
   display: flex;
   align-items: flex-start;
-  margin-left: 4px;
-  margin-right: 4px;
 }
 
 .label-ontology-div2 input {
@@ -353,8 +352,7 @@ label {
     sans-serif;
 }
 .divFilter {
-  margin-right: 10px;
-  margin-left: 10px;
+  margin-right: 20px;
   margin-bottom: 4px;
   width: -moz-fit-content;
   width: fit-content;
@@ -514,7 +512,6 @@ h14 {
   height: 12px;
   border-radius: 4px;
   overflow: auto;
-
 }
 
 .ValueForm2 {
@@ -747,8 +744,19 @@ h14 {
     padding-left: 0px;
     /* border-radius: 8px; */
   }
-  s .containerSelection {
+  .containerSelection {
     margin-top: 12px;
+  }
+  ul {
+    padding-left: 0;
+
+    display: flex;
+    list-style: none;
+    max-height: none;
+
+    flex-direction: column;
+
+    justify-content: center;
   }
 }
 
@@ -839,6 +847,7 @@ h14 {
     /* font-size: 17px; */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
       rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+      font-size: 14px;
   }
   #miSelect {
     font-size: 12px;
